--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
       line-height: 1.6;
     }
   </style>
+
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9522B8XWTD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9522B8XWTD');
+  </script>
 </head>
 <body>
   <div class="container">
@@ -99,7 +108,7 @@
     <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
     <p class="note">* 必須の質問です</p>
 
-    <form id="interview-form">
+    <form id="interview-form" action="https://formspree.io/f/myzjybba" method="POST">
       <div class="form-group">
         <label>1. お名前<span class="required">*</span></label>
         <input type="text" name="name" placeholder="回答を入力" required>
@@ -194,32 +203,23 @@
     </form>
   </div>
 
-  <!-- ✅ 完了メッセージ表示 & チェックバリデーション -->
   <script>
     document.getElementById("interview-form").addEventListener("submit", function(event) {
       const form = event.target;
-
       const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
       const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
-
-      if (!form.checkValidity()) {
-        return;
-      }
-
+      if (!form.checkValidity()) return;
       if (!licenseChecked) {
         alert("5. お持ちの運転免許 を1つ以上選択してください。");
         event.preventDefault();
         return;
       }
-
       if (!interestChecked) {
         alert("6. 気になっていること を1つ以上選択してください。");
         event.preventDefault();
         return;
       }
-
       event.preventDefault();
-
       const container = form.closest(".container");
       container.innerHTML = `
         <div style="text-align: center; padding: 80px 20px;">
