--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ヤマグチレッカー｜カジュアル面談フォーム</title>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9522B8XWTD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9522B8XWTD');
+  </script>
   <style>
     body {
       font-family: sans-serif;
@@ -19,8 +27,8 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
     h1 {
-      font-size: 1.6em;
-      margin-bottom: 0.5em;
+      font-size: 1.8em;
+      margin-bottom: 0.8em;
     }
     .note {
       color: red;
@@ -37,17 +45,16 @@
       display: block;
       margin-bottom: 0.4em;
       font-weight: normal;
+      font-size: 1.1em;
     }
-    input[type="text"],
-    textarea {
+    input[type="text"], textarea {
       width: 100%;
-      padding: 0.6em;
+      padding: 0.8em;
       border: 1px solid #ccc;
       border-radius: 4px;
-      font-size: 1em;
+      font-size: 1.1em;
     }
-    input[type="text"]::placeholder,
-    textarea::placeholder {
+    input[type="text"]::placeholder, textarea::placeholder {
       color: #aaa;
       font-size: 1em;
     }
@@ -56,6 +63,7 @@
       display: block;
       font-weight: normal;
       margin-top: 0.5em;
+      font-size: 1.1em;
     }
     .checkbox-group input[type="text"],
     .radio-group input[type="text"] {
@@ -69,7 +77,7 @@
       color: white;
       border: none;
       border-radius: 5px;
-      font-size: 1em;
+      font-size: 1.2em;
       cursor: pointer;
     }
     .required {
@@ -84,26 +92,13 @@
       line-height: 1.6;
     }
   </style>
-
-  <!-- ✅ Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9522B8XWTD"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-9522B8XWTD');
-  </script>
 </head>
 <body>
   <div class="container">
     <h1>ヤマグチレッカー｜カジュアル面談 お申し込みフォーム</h1>
     <p>ご覧いただきありがとうございます！</p>
-    <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>
-    という方でもご相談いただける【カジュアル面談】を実施しています。</p>
-    <p>✔ 履歴書不要<br>
-    ✔ 私服OK<br>
-    ✔ オンライン・電話も対応<br>
-    ✔ 面談後の応募は自由です</p>
+    <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>という方でもご相談いただける【カジュアル面談】を実施しています。</p>
+    <p>✔ 履歴書不要<br>✔ 私服OK<br>✔ オンライン・電話も対応<br>✔ 面談後の応募は自由です</p>
     <p>「どんな仕事か聞いてみたい」「職場の雰囲気が気になる」など、どんなきっかけでも大歓迎です。</p>
     <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
     <p class="note">* 必須の質問です</p>
@@ -132,7 +127,7 @@
 
       <div class="form-group">
         <label>5. お持ちの運転免許<span class="required">*</span></label>
-        <div class="checkbox-group" id="license-group">
+        <div class="checkbox-group">
           <label><input type="checkbox" name="license" value="普通免許"> 普通免許</label>
           <label><input type="checkbox" name="license" value="準中型免許"> 準中型免許</label>
           <label><input type="checkbox" name="license" value="中型免許"> 中型免許</label>
@@ -144,7 +139,7 @@
 
       <div class="form-group">
         <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
-        <div class="checkbox-group" id="interest-group">
+        <div class="checkbox-group">
           <label><input type="checkbox" name="interest" value="給与・待遇"> 給与・待遇</label>
           <label><input type="checkbox" name="interest" value="シフト・勤務時間"> シフト・勤務時間</label>
           <label><input type="checkbox" name="interest" value="仕事内容"> 仕事内容</label>
@@ -172,8 +167,8 @@
       </div>
 
       <div class="form-group">
-        <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
-        <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
+        <label>9. 面談希望日時（第1〜第3候補）<span class="required">*</span></label>
+        <small>例）第1希望：5月21日（火） 18:00〜19:00 第2希望：5月22日（水） 午前中（9:00〜12:00） 第3希望：5月23日（木） 20:00以降なら対応可</small>
         <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
 
@@ -202,32 +197,5 @@
       <button type="submit">送信する</button>
     </form>
   </div>
-
-  <script>
-    document.getElementById("interview-form").addEventListener("submit", function(event) {
-      const form = event.target;
-      const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
-      const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
-      if (!form.checkValidity()) return;
-      if (!licenseChecked) {
-        alert("5. お持ちの運転免許 を1つ以上選択してください。");
-        event.preventDefault();
-        return;
-      }
-      if (!interestChecked) {
-        alert("6. 気になっていること を1つ以上選択してください。");
-        event.preventDefault();
-        return;
-      }
-      event.preventDefault();
-      const container = form.closest(".container");
-      container.innerHTML = `
-        <div style="text-align: center; padding: 80px 20px;">
-          <h2 style="color: #4a148c; font-size: 1.5em;">送信完了しました！</h2>
-          <p style="margin-top: 1em; font-size: 1.1em;">担当者より24時間以内にご連絡させていただきます！</p>
-        </div>
-      `;
-    });
-  </script>
 </body>
 </html>
