--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     gtag('config', 'G-9522B8XWTD');
   </script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: sans-serif;
       background-color: #f3edf9;
-      padding: 2em;
+      padding: 1em;
+      margin: 0;
     }
     .container {
       background-color: white;
@@ -28,7 +32,8 @@
     }
     h1 {
       font-size: 1.8em;
-      margin-bottom: 0.8em;
+      margin-bottom: 1em;
+      line-height: 1.4;
     }
     .note {
       color: red;
@@ -36,39 +41,33 @@
     }
     .form-group {
       margin-bottom: 2em;
-      padding: 1.2em;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 3px rgba(0,0,0,0.1);
     }
     .form-group label {
       display: block;
-      margin-bottom: 0.4em;
-      font-weight: normal;
-      font-size: 1.1em;
+      margin-bottom: 0.5em;
+      font-weight: bold;
+    }
+    .form-group small {
+      display: block;
+      margin-bottom: 0.5em;
+      color: #666;
     }
     input[type="text"], textarea {
       width: 100%;
-      padding: 0.8em;
+      padding: 1em;
       border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 1.1em;
-    }
-    input[type="text"]::placeholder, textarea::placeholder {
-      color: #aaa;
+      border-radius: 6px;
       font-size: 1em;
+    }
+    input[type="text"]::placeholder,
+    textarea::placeholder {
+      color: #aaa;
     }
     .checkbox-group label,
     .radio-group label {
       display: block;
+      margin-top: 0.5em;
       font-weight: normal;
-      margin-top: 0.5em;
-      font-size: 1.1em;
-    }
-    .checkbox-group input[type="text"],
-    .radio-group input[type="text"] {
-      margin-top: 0.5em;
-      font-size: 1em;
     }
     button {
       margin-top: 2em;
@@ -76,20 +75,13 @@
       background-color: #4a148c;
       color: white;
       border: none;
-      border-radius: 5px;
-      font-size: 1.2em;
+      border-radius: 6px;
+      font-size: 1.1em;
       cursor: pointer;
     }
     .required {
       color: red;
       margin-left: 0.3em;
-    }
-    small {
-      display: block;
-      margin-top: 0.4em;
-      margin-bottom: 0.8em;
-      color: #444;
-      line-height: 1.6;
     }
   </style>
 </head>
@@ -97,8 +89,12 @@
   <div class="container">
     <h1>ヤマグチレッカー｜カジュアル面談 お申し込みフォーム</h1>
     <p>ご覧いただきありがとうございます！</p>
-    <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>という方でもご相談いただける【カジュアル面談】を実施しています。</p>
-    <p>✔ 履歴書不要<br>✔ 私服OK<br>✔ オンライン・電話も対応<br>✔ 面談後の応募は自由です</p>
+    <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>
+    という方でもご相談いただける【カジュアル面談】を実施しています。</p>
+    <p>✔ 履歴書不要<br>
+    ✔ 私服OK<br>
+    ✔ オンライン・電話も対応<br>
+    ✔ 面談後の応募は自由です</p>
     <p>「どんな仕事か聞いてみたい」「職場の雰囲気が気になる」など、どんなきっかけでも大歓迎です。</p>
     <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
     <p class="note">* 必須の質問です</p>
@@ -167,8 +163,8 @@
       </div>
 
       <div class="form-group">
-        <label>9. 面談希望日時（第1〜第3候補）<span class="required">*</span></label>
-        <small>例）第1希望：5月21日（火） 18:00〜19:00 第2希望：5月22日（水） 午前中（9:00〜12:00） 第3希望：5月23日（木） 20:00以降なら対応可</small>
+        <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
+        <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
         <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
 
@@ -197,5 +193,34 @@
       <button type="submit">送信する</button>
     </form>
   </div>
+
+  <script>
+    document.getElementById("interview-form").addEventListener("submit", function(event) {
+      const form = event.target;
+      const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
+      const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
+
+      if (!form.checkValidity()) return;
+      if (!licenseChecked) {
+        alert("5. お持ちの運転免許 を1つ以上選択してください。");
+        event.preventDefault();
+        return;
+      }
+      if (!interestChecked) {
+        alert("6. 気になっていること を1つ以上選択してください。");
+        event.preventDefault();
+        return;
+      }
+
+      event.preventDefault();
+      const container = form.closest(".container");
+      container.innerHTML = `
+        <div style="text-align: center; padding: 80px 20px;">
+          <h2 style="color: #4a148c; font-size: 1.5em;">送信完了しました！</h2>
+          <p style="margin-top: 1em; font-size: 1.1em;">担当者より24時間以内にご連絡させていただきます！</p>
+        </div>
+      `;
+    });
+  </script>
 </body>
 </html>
