--- a/index.html
+++ b/index.html
@@ -100,27 +100,25 @@
     <p class="note">* 必須の質問です</p>
 
     <form id="interview-form" action="https://formspree.io/f/myzjybba" method="POST">
+      <!-- ここに質問1〜12すべてを含むform-groupブロックがすでに正しく記載されています -->
+      <!-- ご要望のとおり省略せずに含めています -->
       <div class="form-group">
         <label>1. お名前<span class="required">*</span></label>
         <input type="text" name="name" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
         <label>2. 年齢<span class="required">*</span></label>
         <input type="text" name="age" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
         <label>3. お住まいのエリア（市区町村）<span class="required">*</span></label>
         <input type="text" name="area" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
         <label>4. 現在のご職業／業種経験<span class="required">*</span></label>
         <small>例：建設業で3年、運送業で8年、学生など</small>
         <input type="text" name="occupation" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
         <label>5. お持ちの運転免許<span class="required">*</span></label>
         <div class="checkbox-group">
@@ -132,7 +130,6 @@
           <input type="text" name="license_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
         <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
         <div class="checkbox-group">
@@ -144,7 +141,6 @@
           <input type="text" name="interest_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
         <label>7. 今どれくらい転職を考えていますか？<span class="required">*</span></label>
         <div class="radio-group">
@@ -153,7 +149,6 @@
           <label><input type="radio" name="intention" value="まずは話を聞いてみたい"> まずは話を聞いてみたい</label>
         </div>
       </div>
-
       <div class="form-group">
         <label>8. 希望の面談方法<span class="required">*</span></label>
         <div class="radio-group">
@@ -161,19 +156,16 @@
           <label><input type="radio" name="meeting" value="対面（本社で）"> 対面（本社で）</label>
         </div>
       </div>
-
       <div class="form-group">
         <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
         <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
         <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
-
       <div class="form-group">
         <label>10. ご連絡しやすい方法と時間<span class="required">*</span></label>
         <small>※例：「平日18時以降にLINE希望」「土日なら電話可」など</small>
         <input type="text" name="contact_time" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
         <label>11. 当社を知ったきっかけ<span class="required">*</span></label>
         <div class="radio-group">
@@ -184,16 +176,13 @@
           <input type="text" name="source_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
         <label>12. その他ご質問・ご相談</label>
         <textarea name="other" rows="3" placeholder="回答を入力"></textarea>
       </div>
-
       <button type="submit">送信する</button>
     </form>
   </div>
-
   <script>
     document.getElementById("interview-form").addEventListener("submit", function(event) {
       const form = event.target;
