--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
       margin-bottom: 2em;
     }
     .form-group {
-      margin-bottom: 2.5em;
+      margin: 2.5em 0;
       padding: 1.5em 1em;
       border: 1px solid #e0e0e0;
       border-radius: 10px;
       background-color: #fafafa;
+    }
+    .form-group:first-of-type {
+      margin-top: 3.5em;
     }
     .form-group label {
       display: block;
@@ -94,7 +97,7 @@
     @media screen and (max-width: 600px) {
       .form-group {
         padding: 1.5em 1em;
-        margin-bottom: 2.5em;
+        margin: 2.5em 0;
       }
       input[type="text"], textarea {
         font-size: 0.95em;
@@ -121,9 +124,6 @@
     <p>「どんな仕事か聞いてみたい」「職場の雰囲気が気になる」など、どんなきっかけでも大歓迎です。</p>
     <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
     <p class="note">* 必須の質問です</p>
-
-    <!-- フォーム本体やスクリプトなど残りのコードは、前回投稿済みのものを使用してください -->
-
   </div>
 </body>
 </html>
