--- a/index.html
+++ b/index.html
@@ -132,37 +132,32 @@
 
     <form id="interview-form" action="https://formspree.io/f/myzjybba" method="POST">
       <div class="form-group">
-        <label>1. お名前 <span class="required">*</span></label>
-        <input type="text" name="name" placeholder="例）山口 太郎" required />
-      </div>
-
-      <div class="form-group">
-        <label>2. フリガナ <span class="required">*</span></label>
+        <label>1. フリガナ <span class="required">*</span></label>
         <input type="text" name="furigana" placeholder="例）ヤマグチ タロウ" required />
       </div>
 
       <div class="form-group">
-        <label>3. 年齢 <span class="required">*</span></label>
+        <label>2. 年齢 <span class="required">*</span></label>
         <input type="text" name="age" placeholder="例）25" required />
       </div>
 
       <div class="form-group">
-        <label>4. 電話番号 <span class="required">*</span></label>
+        <label>3. 電話番号 <span class="required">*</span></label>
         <input type="text" name="phone" placeholder="例）08012345678" required />
       </div>
 
       <div class="form-group">
-        <label>5. メールアドレス <span class="required">*</span></label>
+        <label>4. メールアドレス <span class="required">*</span></label>
         <input type="email" name="email" placeholder="例）sample@example.com" required />
       </div>
 
       <div class="form-group">
-        <label>6. 現在のご職業 <span class="required">*</span></label>
+        <label>5. 現在のご職業 <span class="required">*</span></label>
         <input type="text" name="job" placeholder="例）会社員 / 学生 / フリーターなど" required />
       </div>
 
       <div class="form-group">
-        <label>7. 普通自動車運転免許の有無 <span class="required">*</span></label>
+        <label>6. 普通自動車運転免許の有無 <span class="required">*</span></label>
         <div class="radio-group">
           <label><input type="radio" name="license" value="あり" required /> あり</label>
           <label><input type="radio" name="license" value="なし" /> なし</label>
@@ -170,7 +165,7 @@
       </div>
 
       <div class="form-group">
-        <label>8. ご希望の面談方法 <span class="required">*</span></label>
+        <label>7. ご希望の面談方法 <span class="required">*</span></label>
         <div class="radio-group">
           <label><input type="radio" name="method" value="対面" required /> 対面</label>
           <label><input type="radio" name="method" value="電話" /> 電話</label>
@@ -179,29 +174,35 @@
       </div>
 
       <div class="form-group">
-        <label>9. 面談希望日時（第1〜第3候補）<span class="required">*</span></label>
+        <label>8. 面談希望日時（第1〜第3候補）<span class="required">*</span></label>
         <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
         <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
 
       <div class="form-group">
-        <label>10. 現住所（市区町村まででOK） <span class="required">*</span></label>
+        <label>9. 現住所（市区町村まででOK） <span class="required">*</span></label>
         <input type="text" name="address" placeholder="例）横浜市港南区" required />
       </div>
 
       <div class="form-group">
-        <label>11. ご質問やご要望（任意）</label>
+        <label>10. ご質問やご要望（任意）</label>
         <textarea name="question" rows="3" placeholder="質問や希望があればご記入ください"></textarea>
       </div>
 
       <div class="form-group">
-        <label>12. 当フォームをどこで知りましたか？ <span class="required">*</span></label>
-        <div class="checkbox-group">
-          <label><input type="checkbox" name="source" value="Instagram" /> Instagram</label>
-          <label><input type="checkbox" name="source" value="知人の紹介" /> 知人の紹介</label>
-          <label><input type="checkbox" name="source" value="Google検索" /> Google検索</label>
-          <label><input type="checkbox" name="source" value="その他" /> その他</label>
+        <label>11. 当社を知ったきっかけ <span class="required">*</span></label>
+        <div class="radio-group">
+          <label><input type="radio" name="source" value="TikTok" required /> TikTok</label>
+          <label><input type="radio" name="source" value="Instagram" /> Instagram</label>
+          <label><input type="radio" name="source" value="知人紹介" /> 知人紹介</label>
+          <label><input type="radio" name="source" value="検索" /> 検索</label>
         </div>
+        <input type="text" name="source_other" placeholder="その他" style="margin-top: 1em;" />
+      </div>
+
+      <div class="form-group">
+        <label>12. その他ご質問・ご相談</label>
+        <textarea name="other" rows="3" placeholder="回答を入力"></textarea>
       </div>
 
       <button type="submit">送信する</button>
