--- a/index.html
+++ b/index.html
@@ -138,66 +138,82 @@
 
       <div class="form-group">
         <label>2. 年齢 <span class="required">*</span></label>
-        <input type="text" name="age" placeholder="例）25" required />
+        <input type="text" name="age" placeholder="回答を入力" required />
       </div>
 
       <div class="form-group">
-        <label>3. 電話番号 <span class="required">*</span></label>
-        <input type="text" name="phone" placeholder="例）08012345678" required />
+        <label>3. お住まいのエリア（市区町村）<span class="required">*</span></label>
+        <input type="text" name="area" placeholder="回答を入力" required />
       </div>
 
       <div class="form-group">
-        <label>4. メールアドレス <span class="required">*</span></label>
-        <input type="email" name="email" placeholder="例）sample@example.com" required />
+        <label>4. 現在のご職業／業種経験 <span class="required">*</span></label>
+        <small>例：建設業で3年、運送業で8年、学生など</small>
+        <input type="text" name="occupation" placeholder="回答を入力" required />
       </div>
 
       <div class="form-group">
-        <label>5. 現在のご職業 <span class="required">*</span></label>
-        <input type="text" name="job" placeholder="例）会社員 / 学生 / フリーターなど" required />
-      </div>
-
-      <div class="form-group">
-        <label>6. 普通自動車運転免許の有無 <span class="required">*</span></label>
-        <div class="radio-group">
-          <label><input type="radio" name="license" value="あり" required /> あり</label>
-          <label><input type="radio" name="license" value="なし" /> なし</label>
+        <label>5. お持ちの運転免許 <span class="required">*</span></label>
+        <div class="checkbox-group">
+          <label><input type="checkbox" name="license" value="普通免許"> 普通免許</label>
+          <label><input type="checkbox" name="license" value="準中型免許"> 準中型免許</label>
+          <label><input type="checkbox" name="license" value="中型免許"> 中型免許</label>
+          <label><input type="checkbox" name="license" value="大型免許"> 大型免許</label>
+          <label><input type="checkbox" name="license" value="けん引免許"> けん引免許</label>
+          <input type="text" name="license_other" placeholder="その他">
         </div>
       </div>
 
       <div class="form-group">
-        <label>7. ご希望の面談方法 <span class="required">*</span></label>
-        <div class="radio-group">
-          <label><input type="radio" name="method" value="対面" required /> 対面</label>
-          <label><input type="radio" name="method" value="電話" /> 電話</label>
-          <label><input type="radio" name="method" value="オンライン" /> オンライン</label>
+        <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
+        <div class="checkbox-group">
+          <label><input type="checkbox" name="interest" value="給与・待遇"> 給与・待遇</label>
+          <label><input type="checkbox" name="interest" value="シフト・勤務時間"> シフト・勤務時間</label>
+          <label><input type="checkbox" name="interest" value="仕事内容"> 仕事内容</label>
+          <label><input type="checkbox" name="interest" value="職場の雰囲気"> 職場の雰囲気</label>
+          <label><input type="checkbox" name="interest" value="資格支援・キャリアパス"> 資格支援・キャリアパス</label>
+          <input type="text" name="interest_other" placeholder="その他">
         </div>
       </div>
 
       <div class="form-group">
-        <label>8. 面談希望日時（第1〜第3候補）<span class="required">*</span></label>
+        <label>7. 今どれくらい転職を考えていますか？<span class="required">*</span></label>
+        <div class="radio-group">
+          <label><input type="radio" name="intention" value="今すぐにでも働きたい" required> 今すぐにでも働きたい</label>
+          <label><input type="radio" name="intention" value="良い職場があれば検討したい"> 良い職場があれば検討したい</label>
+          <label><input type="radio" name="intention" value="まずは話を聞いてみたい"> まずは話を聞いてみたい</label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>8. 希望の面談方法 <span class="required">*</span></label>
+        <div class="radio-group">
+          <label><input type="radio" name="meeting" value="オンライン（Zoom）" required> オンライン（Zoom）</label>
+          <label><input type="radio" name="meeting" value="対面（本社で）"> 対面（本社で）</label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
         <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
         <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
 
       <div class="form-group">
-        <label>9. 現住所（市区町村まででOK） <span class="required">*</span></label>
-        <input type="text" name="address" placeholder="例）横浜市港南区" required />
-      </div>
-
-      <div class="form-group">
-        <label>10. ご質問やご要望（任意）</label>
-        <textarea name="question" rows="3" placeholder="質問や希望があればご記入ください"></textarea>
+        <label>10. ご連絡しやすい方法と時間 <span class="required">*</span></label>
+        <small>※例：「平日18時以降にLINE希望」「土日なら電話可」など</small>
+        <input type="text" name="contact_time" placeholder="回答を入力" required />
       </div>
 
       <div class="form-group">
         <label>11. 当社を知ったきっかけ <span class="required">*</span></label>
         <div class="radio-group">
-          <label><input type="radio" name="source" value="TikTok" required /> TikTok</label>
-          <label><input type="radio" name="source" value="Instagram" /> Instagram</label>
-          <label><input type="radio" name="source" value="知人紹介" /> 知人紹介</label>
-          <label><input type="radio" name="source" value="検索" /> 検索</label>
+          <label><input type="radio" name="source" value="TikTok" required> TikTok</label>
+          <label><input type="radio" name="source" value="Instagram"> Instagram</label>
+          <label><input type="radio" name="source" value="知人紹介"> 知人紹介</label>
+          <label><input type="radio" name="source" value="検索"> 検索</label>
+          <input type="text" name="source_other" placeholder="その他">
         </div>
-        <input type="text" name="source_other" placeholder="その他" style="margin-top: 1em;" />
       </div>
 
       <div class="form-group">
