--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     gtag('config', 'G-9522B8XWTD');
   </script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       font-family: sans-serif;
       background-color: #f3edf9;
@@ -48,7 +46,7 @@
       border: 1px solid #e0e0e0;
       border-radius: 10px;
       background-color: #fafafa;
-      width: 90%;
+      width: 100%;
       max-width: 600px;
     }
     .form-group label {
@@ -92,7 +90,7 @@
       border-radius: 6px;
       font-size: 1.1em;
       cursor: pointer;
-      width: 90%;
+      width: 100%;
       max-width: 600px;
     }
     .required {
@@ -132,28 +130,24 @@
 
     <form id="interview-form" action="https://formspree.io/f/myzjybba" method="POST">
       <div class="form-group">
-        <label>1. フリガナ <span class="required">*</span></label>
-        <input type="text" name="furigana" placeholder="例）ヤマグチ タロウ" required />
+        <label for="name">1. お名前<span class="required">*</span></label>
+        <input type="text" id="name" name="name" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
-        <label>2. 年齢 <span class="required">*</span></label>
-        <input type="text" name="age" placeholder="回答を入力" required />
+        <label for="age">2. 年齢<span class="required">*</span></label>
+        <input type="text" id="age" name="age" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
-        <label>3. お住まいのエリア（市区町村）<span class="required">*</span></label>
-        <input type="text" name="area" placeholder="回答を入力" required />
+        <label for="area">3. お住まいのエリア（市区町村）<span class="required">*</span></label>
+        <input type="text" id="area" name="area" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
-        <label>4. 現在のご職業／業種経験 <span class="required">*</span></label>
+        <label for="occupation">4. 現在のご職業／業種経験<span class="required">*</span></label>
         <small>例：建設業で3年、運送業で8年、学生など</small>
-        <input type="text" name="occupation" placeholder="回答を入力" required />
+        <input type="text" id="occupation" name="occupation" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
-        <label>5. お持ちの運転免許 <span class="required">*</span></label>
+        <label>5. お持ちの運転免許<span class="required">*</span></label>
         <div class="checkbox-group">
           <label><input type="checkbox" name="license" value="普通免許"> 普通免許</label>
           <label><input type="checkbox" name="license" value="準中型免許"> 準中型免許</label>
@@ -163,7 +157,6 @@
           <input type="text" name="license_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
         <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
         <div class="checkbox-group">
@@ -175,7 +168,6 @@
           <input type="text" name="interest_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
         <label>7. 今どれくらい転職を考えていますか？<span class="required">*</span></label>
         <div class="radio-group">
@@ -184,29 +176,25 @@
           <label><input type="radio" name="intention" value="まずは話を聞いてみたい"> まずは話を聞いてみたい</label>
         </div>
       </div>
-
       <div class="form-group">
-        <label>8. 希望の面談方法 <span class="required">*</span></label>
+        <label>8. 希望の面談方法<span class="required">*</span></label>
         <div class="radio-group">
           <label><input type="radio" name="meeting" value="オンライン（Zoom）" required> オンライン（Zoom）</label>
           <label><input type="radio" name="meeting" value="対面（本社で）"> 対面（本社で）</label>
         </div>
       </div>
-
       <div class="form-group">
-        <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
+        <label for="datetime">9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
         <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
-        <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
+        <textarea id="datetime" name="datetime" rows="3" placeholder="回答を入力" required></textarea>
       </div>
-
       <div class="form-group">
-        <label>10. ご連絡しやすい方法と時間 <span class="required">*</span></label>
+        <label for="contact_time">10. ご連絡しやすい方法と時間<span class="required">*</span></label>
         <small>※例：「平日18時以降にLINE希望」「土日なら電話可」など</small>
-        <input type="text" name="contact_time" placeholder="回答を入力" required />
+        <input type="text" id="contact_time" name="contact_time" placeholder="回答を入力" required>
       </div>
-
       <div class="form-group">
-        <label>11. 当社を知ったきっかけ <span class="required">*</span></label>
+        <label>11. 当社を知ったきっかけ<span class="required">*</span></label>
         <div class="radio-group">
           <label><input type="radio" name="source" value="TikTok" required> TikTok</label>
           <label><input type="radio" name="source" value="Instagram"> Instagram</label>
@@ -215,14 +203,40 @@
           <input type="text" name="source_other" placeholder="その他">
         </div>
       </div>
-
       <div class="form-group">
-        <label>12. その他ご質問・ご相談</label>
-        <textarea name="other" rows="3" placeholder="回答を入力"></textarea>
+        <label for="other">12. その他ご質問・ご相談</label>
+        <textarea id="other" name="other" rows="3" placeholder="回答を入力"></textarea>
       </div>
-
       <button type="submit">送信する</button>
     </form>
   </div>
+  <script>
+    document.getElementById("interview-form").addEventListener("submit", function(event) {
+      const form = event.target;
+      const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
+      const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
+
+      if (!form.checkValidity()) return;
+      if (!licenseChecked) {
+        alert("5. お持ちの運転免許 を1つ以上選択してください。");
+        event.preventDefault();
+        return;
+      }
+      if (!interestChecked) {
+        alert("6. 気になっていること を1つ以上選択してください。");
+        event.preventDefault();
+        return;
+      }
+
+      event.preventDefault();
+      const container = form.closest(".container");
+      container.innerHTML = `
+        <div style="text-align: center; padding: 80px 20px;">
+          <h2 style="color: #4a148c; font-size: 1.5em;">送信完了しました！</h2>
+          <p style="margin-top: 1em; font-size: 1.1em;">担当者より24時間以内にご連絡させていただきます！</p>
+        </div>
+      `;
+    });
+  </script>
 </body>
 </html>
