--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
       padding: 1em;
       margin: 0;
     }
-    .container {
+    .intro-container, .form-container {
       background-color: white;
       padding: 2em;
       max-width: 700px;
-      margin: auto;
+      margin: 2em auto;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    }
-    .intro {
-      margin-bottom: 2em;
     }
     h1 {
       font-size: 1.8em;
@@ -41,9 +38,6 @@
       color: red;
       margin-top: 2em;
       margin-bottom: 2em;
-    }
-    form {
-      margin-top: 2em;
     }
     .form-group {
       margin: 2.5em auto;
@@ -65,15 +59,14 @@
       margin-bottom: 1em;
       color: #666;
     }
-    input[type="text"], input[type="email"], textarea {
+    input[type="text"], textarea {
       width: 100%;
       padding: 1em;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1em;
     }
-    input[type="text"]::placeholder,
-    input[type="email"]::placeholder,
+    input::placeholder,
     textarea::placeholder {
       color: #aaa;
     }
@@ -107,7 +100,7 @@
         padding: 1.5em;
         margin: 2.5em auto;
       }
-      input[type="text"], input[type="email"], textarea {
+      input, textarea {
         font-size: 0.95em;
       }
       label, small {
@@ -120,104 +113,101 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="intro">
-      <h1>ヤマグチレッカー｜カジュアル面談 お申し込みフォーム</h1>
-      <p>ご覧いただきありがとうございます！</p>
-      <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>
-      という方でもご相談いただける【カジュアル面談】を実施しています。</p>
-      <p>✔ 履歴書不要<br>
-      ✔ 私服OK<br>
-      ✔ オンライン・電話も対応<br>
-      ✔ 面談後の応募は自由です</p>
-      <p>「どんな仕事か聞いてみたい」「職場の雰囲気が気になる」など、どんなきっかけでも大歓迎です。</p>
-      <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
-      <p class="note">* 必須の質問です</p>
-    </div>
-
-    <!-- フォーム -->
-    <form id="interview-form" action="https://formspree.io/f/myzjybba" method="POST">
-      <div class="form-group">
-        <label>1. お名前<span class="required">*</span></label>
-        <input type="text" name="name" placeholder="回答を入力" required>
-      </div>
-      <div class="form-group">
-        <label>2. 年齢<span class="required">*</span></label>
-        <input type="text" name="age" placeholder="回答を入力" required>
-      </div>
-      <div class="form-group">
-        <label>3. お住まいのエリア（市区町村）<span class="required">*</span></label>
-        <input type="text" name="area" placeholder="回答を入力" required>
-      </div>
-      <div class="form-group">
-        <label>4. 現在のご職業／業種経験<span class="required">*</span></label>
-        <small>例：建設業で3年、運送業で8年、学生など</small>
-        <input type="text" name="occupation" placeholder="回答を入力" required>
-      </div>
-      <div class="form-group">
-        <label>5. お持ちの運転免許<span class="required">*</span></label>
-        <div class="checkbox-group">
-          <label><input type="checkbox" name="license" value="普通免許"> 普通免許</label>
-          <label><input type="checkbox" name="license" value="準中型免許"> 準中型免許</label>
-          <label><input type="checkbox" name="license" value="中型免許"> 中型免許</label>
-          <label><input type="checkbox" name="license" value="大型免許"> 大型免許</label>
-          <label><input type="checkbox" name="license" value="けん引免許"> けん引免許</label>
-          <input type="text" name="license_other" placeholder="その他">
-        </div>
-      </div>
-      <div class="form-group">
-        <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
-        <div class="checkbox-group">
-          <label><input type="checkbox" name="interest" value="給与・待遇"> 給与・待遇</label>
-          <label><input type="checkbox" name="interest" value="シフト・勤務時間"> シフト・勤務時間</label>
-          <label><input type="checkbox" name="interest" value="仕事内容"> 仕事内容</label>
-          <label><input type="checkbox" name="interest" value="職場の雰囲気"> 職場の雰囲気</label>
-          <label><input type="checkbox" name="interest" value="資格支援・キャリアパス"> 資格支援・キャリアパス</label>
-          <input type="text" name="interest_other" placeholder="その他">
-        </div>
-      </div>
-      <div class="form-group">
-        <label>7. 今どれくらい転職を考えていますか？<span class="required">*</span></label>
-        <div class="radio-group">
-          <label><input type="radio" name="intention" value="今すぐにでも働きたい" required> 今すぐにでも働きたい</label>
-          <label><input type="radio" name="intention" value="良い職場があれば検討したい"> 良い職場があれば検討したい</label>
-          <label><input type="radio" name="intention" value="まずは話を聞いてみたい"> まずは話を聞いてみたい</label>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>8. 希望の面談方法<span class="required">*</span></label>
-        <div class="radio-group">
-          <label><input type="radio" name="meeting" value="オンライン（Zoom）" required> オンライン（Zoom）</label>
-          <label><input type="radio" name="meeting" value="対面（本社で）"> 対面（本社で）</label>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
-        <small>例）第1希望：5月21日（火） 18:00〜19:00<br>第2希望：5月22日（水） 午前中（9:00〜12:00）<br>第3希望：5月23日（木） 20:00以降なら対応可</small>
-        <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
-      </div>
-      <div class="form-group">
-        <label>10. ご連絡しやすい方法と時間<span class="required">*</span></label>
-        <small>※例：「平日18時以降にLINE希望」「土日なら電話可」など</small>
-        <input type="text" name="contact_time" placeholder="回答を入力" required>
-      </div>
-      <div class="form-group">
-        <label>11. 当社を知ったきっかけ<span class="required">*</span></label>
-        <div class="radio-group">
-          <label><input type="radio" name="source" value="TikTok" required> TikTok</label>
-          <label><input type="radio" name="source" value="Instagram"> Instagram</label>
-          <label><input type="radio" name="source" value="知人紹介"> 知人紹介</label>
-          <label><input type="radio" name="source" value="検索"> 検索</label>
-          <input type="text" name="source_other" placeholder="その他">
-        </div>
-      </div>
-      <div class="form-group">
-        <label>12. その他ご質問・ご相談</label>
-        <textarea name="other" rows="3" placeholder="回答を入力"></textarea>
-      </div>
-      <button type="submit">送信する</button>
-    </form>
+  <div class="intro-container">
+    <h1>ヤマグチレッカー｜カジュアル面談 お申し込みフォーム</h1>
+    <p>ご覧いただきありがとうございます！</p>
+    <p>ヤマグチレッカーでは、まずは「気軽に話してみたい」「ちょっと興味がある」<br>
+    という方でもご相談いただける【カジュアル面談】を実施しています。</p>
+    <p>✔ 履歴書不要<br>
+    ✔ 私服OK<br>
+    ✔ オンライン・電話も対応<br>
+    ✔ 面談後の応募は自由です</p>
+    <p>「どんな仕事か聞いてみたい」「職場の雰囲気が気になる」など、どんなきっかけでも大歓迎です。</p>
+    <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
+    <p class="note">* 必須の質問です</p>
   </div>
+
+  <form id="interview-form" class="form-container" action="https://formspree.io/f/myzjybba" method="POST">
+    <div class="form-group">
+      <label>1. お名前<span class="required">*</span></label>
+      <input type="text" name="name" placeholder="回答を入力" required>
+    </div>
+    <div class="form-group">
+      <label>2. 年齢<span class="required">*</span></label>
+      <input type="text" name="age" placeholder="回答を入力" required>
+    </div>
+    <div class="form-group">
+      <label>3. お住まいのエリア（市区町村）<span class="required">*</span></label>
+      <input type="text" name="area" placeholder="回答を入力" required>
+    </div>
+    <div class="form-group">
+      <label>4. 現在のご職業／業種経験<span class="required">*</span></label>
+      <small>例：建設業で3年、運送業で8年、学生など</small>
+      <input type="text" name="occupation" placeholder="回答を入力" required>
+    </div>
+    <div class="form-group">
+      <label>5. お持ちの運転免許<span class="required">*</span></label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="license" value="普通免許"> 普通免許</label>
+        <label><input type="checkbox" name="license" value="準中型免許"> 準中型免許</label>
+        <label><input type="checkbox" name="license" value="中型免許"> 中型免許</label>
+        <label><input type="checkbox" name="license" value="大型免許"> 大型免許</label>
+        <label><input type="checkbox" name="license" value="けん引免許"> けん引免許</label>
+        <input type="text" name="license_other" placeholder="その他">
+      </div>
+    </div>
+    <div class="form-group">
+      <label>6. 気になっていることは？（複数選択可）<span class="required">*</span></label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="interest" value="給与・待遇"> 給与・待遇</label>
+        <label><input type="checkbox" name="interest" value="シフト・勤務時間"> シフト・勤務時間</label>
+        <label><input type="checkbox" name="interest" value="仕事内容"> 仕事内容</label>
+        <label><input type="checkbox" name="interest" value="職場の雰囲気"> 職場の雰囲気</label>
+        <label><input type="checkbox" name="interest" value="資格支援・キャリアパス"> 資格支援・キャリアパス</label>
+        <input type="text" name="interest_other" placeholder="その他">
+      </div>
+    </div>
+    <div class="form-group">
+      <label>7. 今どれくらい転職を考えていますか？<span class="required">*</span></label>
+      <div class="radio-group">
+        <label><input type="radio" name="intention" value="今すぐにでも働きたい" required> 今すぐにでも働きたい</label>
+        <label><input type="radio" name="intention" value="良い職場があれば検討したい"> 良い職場があれば検討したい</label>
+        <label><input type="radio" name="intention" value="まずは話を聞いてみたい"> まずは話を聞いてみたい</label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>8. 希望の面談方法<span class="required">*</span></label>
+      <div class="radio-group">
+        <label><input type="radio" name="meeting" value="オンライン（Zoom）" required> オンライン（Zoom）</label>
+        <label><input type="radio" name="meeting" value="対面（本社で）"> 対面（本社で）</label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>9. 面談希望日時（第1〜第3候補）まで教えてください。（土日祝可）<span class="required">*</span></label>
+      <small>例）第1希望：6月5日（水）18:00〜19:00／第2希望：6月6日（木）午前中（9:00〜12:00）／第3希望：6月7日（金）20:00以降なら対応可</small>
+      <textarea name="datetime" rows="3" placeholder="回答を入力" required></textarea>
+    </div>
+    <div class="form-group">
+      <label>10. ご連絡しやすい方法と時間<span class="required">*</span></label>
+      <small>※例：「平日18時以降にLINE希望」「土日なら電話可」など</small>
+      <input type="text" name="contact_time" placeholder="回答を入力" required>
+    </div>
+    <div class="form-group">
+      <label>11. 当社を知ったきっかけ<span class="required">*</span></label>
+      <div class="radio-group">
+        <label><input type="radio" name="source" value="TikTok" required> TikTok</label>
+        <label><input type="radio" name="source" value="Instagram"> Instagram</label>
+        <label><input type="radio" name="source" value="知人紹介"> 知人紹介</label>
+        <label><input type="radio" name="source" value="検索"> 検索</label>
+        <input type="text" name="source_other" placeholder="その他">
+      </div>
+    </div>
+    <div class="form-group">
+      <label>12. その他ご質問・ご相談</label>
+      <textarea name="other" rows="3" placeholder="回答を入力"></textarea>
+    </div>
+    <button type="submit">送信する</button>
+  </form>
   <script>
     document.getElementById("interview-form").addEventListener("submit", function(event) {
       const form = event.target;
@@ -237,7 +227,7 @@
       }
 
       event.preventDefault();
-      const container = form.closest(".container");
+      const container = form.closest(".form-container");
       container.innerHTML = `
         <div style="text-align: center; padding: 80px 20px;">
           <h2 style="color: #4a148c; font-size: 1.5em;">送信完了しました！</h2>
