--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <div class="form-group">
       <label>10. ご連絡しやすい方法と時間<span class="required">*</span></label>
-      <small>※例：平日18時以降が都合いいなど</small>
+     <small>※例：平日18時以降なら都合がいい</small>
       <input type="text" name="contact_time" placeholder="回答を入力" required>
     </div>
     <div class="form-group">
