--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   </div>
 
   <form id="interview-form" class="form-container" action="https://formspree.io/f/myzjybba" method="POST">
+    <input type="hidden" name="_redirect" value="https://yourdomain.com/thanks.html">
     <div class="form-group">
       <label>1. お名前<span class="required">*</span></label>
       <input type="text" name="name" required placeholder="回答を入力">
