--- a/index.html
+++ b/index.html
@@ -210,30 +210,49 @@
     <button type="submit" id="submit-button">送信する</button>
   </form>
 
-  <script>
-    document.getElementById("interview-form").addEventListener("submit", function(event) {
-      const form = event.target;
-      const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
-      const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
+ <script>
+  document.getElementById("interview-form").addEventListener("submit", async function(event) {
+    event.preventDefault(); // デフォルト送信を止める
 
-      if (!form.checkValidity()) return;
-      if (!licenseChecked) {
-        alert("5. お持ちの運転免許 を1つ以上選択してください。");
-        event.preventDefault();
-        return;
-      }
-      if (!interestChecked) {
-        alert("6. 気になっていること を1つ以上選択してください。");
-        event.preventDefault();
-        return;
-      }
+    const form = event.target;
 
-      // Google Analytics イベントトラッキング
-      gtag('event', 'submit', {
-        'event_category': 'Form',
-        'event_label': 'Interview Form Submitted'
-      });
+    // バリデーション
+    const licenseChecked = form.querySelectorAll('input[name="license"]:checked').length > 0;
+    const interestChecked = form.querySelectorAll('input[name="interest"]:checked').length > 0;
+    if (!form.checkValidity()) return;
+    if (!licenseChecked) {
+      alert("5. お持ちの運転免許 を1つ以上選択してください。");
+      return;
+    }
+    if (!interestChecked) {
+      alert("6. 気になっていること を1つ以上選択してください。");
+      return;
+    }
+
+    // Google Analytics トラッキング
+    gtag('event', 'submit', {
+      'event_category': 'Form',
+      'event_label': 'Interview Form Submitted'
     });
-  </script>
-</body>
-</html>
+
+    // フォーム送信
+    const formData = new FormData(form);
+    try {
+      const response = await fetch("https://formspree.io/f/myzjybba", {
+        method: "POST",
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+
+      if (response.ok) {
+        form.innerHTML = "<p style='text-align:center; font-size:1.2em;'>送信ありがとうございました。<br>担当者よりご連絡いたします。</p>";
+      } else {
+        alert("送信に失敗しました。もう一度お試しください。");
+      }
+    } catch (error) {
+      alert("通信エラーが発生しました。ネットワークをご確認ください。");
+    }
+  });
+</script>
